--- a/Project 1 Data Katrina.ipynb
+++ b/Project 1 Data Katrina.ipynb
@@ -222,6 +222,7 @@
     "\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
+    "\n",
     "katrina_Housing_df['Delta'] = ((katrina_Housing_df['DATE'] - katrina_Housing_df['Hurricane Date']).dt.days/365)\n",
     "\n",
     "katrina_Housing_df['Delta'] = katrina_Housing_df['Delta'].astype(float)\n",
@@ -565,6 +566,8 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Median Income Year</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -576,7 +579,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-4.660274</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -585,7 +590,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-3.660274</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -594,7 +601,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-2.660274</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -603,7 +612,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-1.660274</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -612,7 +623,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-0.657534</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -626,12 +639,12 @@
        "3 2004-01-01  81334.302   Katrina     2005-08-29  New Orleans Metro Area   \n",
        "4 2005-01-01  84318.920   Katrina     2005-08-29  New Orleans Metro Area   \n",
        "\n",
-       "      Delta  \n",
-       "0 -4.660274  \n",
-       "1 -3.660274  \n",
-       "2 -2.660274  \n",
-       "3 -1.660274  \n",
-       "4 -0.657534  "
+       "   Hurricane Year  Median Income Year  Delta  \n",
+       "0            2005                2001     -4  \n",
+       "1            2005                2002     -3  \n",
+       "2            2005                2003     -2  \n",
+       "3            2005                2004     -1  \n",
+       "4            2005                2005      0  "
       ]
      },
      "execution_count": 7,
@@ -652,11 +665,18 @@
     "\n",
     "katrina_real_GDP_df['Hurricane Date'] = pd.to_datetime(katrina_real_GDP_df['Hurricane Date'])\n",
     "\n",
+    "katrina_real_GDP_df['Hurricane Year'] = pd.to_datetime(katrina_real_GDP_df['Hurricane Date'],format='%Y%m%d')\n",
+    "\n",
+    "katrina_real_GDP_df['Hurricane Year'] = pd.DatetimeIndex(katrina_real_GDP_df['Hurricane Year']).year\n",
+    "\n",
+    "katrina_real_GDP_df['Median Income Year'] = pd.to_datetime(katrina_real_GDP_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "katrina_real_GDP_df['Median Income Year'] = pd.DatetimeIndex(katrina_real_GDP_df['Median Income Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
-    "katrina_real_GDP_df['Delta'] = ((katrina_real_GDP_df['DATE'] - katrina_real_GDP_df['Hurricane Date']).dt.days/365)\n",
+    "katrina_real_GDP_df['Delta'] = ((katrina_real_GDP_df['Median Income Year'] - katrina_real_GDP_df['Hurricane Year']))\n",
     "\n",
-    "katrina_real_GDP_df['Delta'] = katrina_real_GDP_df['Delta'].astype(float)\n",
+    "katrina_real_GDP_df['Delta'] = katrina_real_GDP_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "katrina_real_GDP_df = katrina_real_GDP_df.rename(columns={'RGMP35380': 'Real GDP'})\n",
@@ -995,6 +1015,8 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Median Income Year</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1006,7 +1028,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-4.660274</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1015,7 +1039,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-3.660274</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1024,7 +1050,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-2.660274</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1033,7 +1061,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-1.660274</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1042,7 +1072,9 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-0.657534</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1056,12 +1088,12 @@
        "3 2004-01-01   27355   Katrina     2005-08-29  New Orleans Metro Area   \n",
        "4 2005-01-01   30216   Katrina     2005-08-29  New Orleans Metro Area   \n",
        "\n",
-       "      Delta  \n",
-       "0 -4.660274  \n",
-       "1 -3.660274  \n",
-       "2 -2.660274  \n",
-       "3 -1.660274  \n",
-       "4 -0.657534  "
+       "   Hurricane Year  Median Income Year  Delta  \n",
+       "0            2005                2001     -4  \n",
+       "1            2005                2002     -3  \n",
+       "2            2005                2003     -2  \n",
+       "3            2005                2004     -1  \n",
+       "4            2005                2005      0  "
       ]
      },
      "execution_count": 12,
@@ -1082,11 +1114,18 @@
     "\n",
     "katrina_median_df['Hurricane Date'] = pd.to_datetime(katrina_median_df['Hurricane Date'])\n",
     "\n",
+    "katrina_median_df['Hurricane Year'] = pd.to_datetime(katrina_median_df['Hurricane Date'],format='%Y%m%d')\n",
+    "\n",
+    "katrina_median_df['Hurricane Year'] = pd.DatetimeIndex(katrina_median_df['Hurricane Year']).year\n",
+    "\n",
+    "katrina_median_df['Median Income Year'] = pd.to_datetime(katrina_median_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "katrina_median_df['Median Income Year'] = pd.DatetimeIndex(katrina_median_df['Median Income Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
-    "katrina_median_df['Delta'] = ((katrina_median_df['DATE'] - katrina_median_df['Hurricane Date']).dt.days/365)\n",
+    "katrina_median_df['Delta'] = ((katrina_median_df['Median Income Year'] - katrina_median_df['Hurricane Year']))\n",
     "\n",
-    "katrina_median_df['Delta'] = katrina_median_df['Delta'].astype(float)\n",
+    "# katrina_median_df['Delta'] = katrina_median_df['Delta'].astype(int)\n",
     "\n",
     "katrina_median_df.head()\n",
     "\n"
@@ -1178,122 +1217,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e4675978",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DATE</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Hurricane</th>\n",
-       "      <th>Hurricane Date</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Hurricane Year</th>\n",
-       "      <th>Population Year</th>\n",
-       "      <th>Delta</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2001-01-01</td>\n",
-       "      <td>1311.131</td>\n",
-       "      <td>Katrina</td>\n",
-       "      <td>2005-08-29</td>\n",
-       "      <td>New Orleans Metro Area</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>-4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2002-01-01</td>\n",
-       "      <td>1311.390</td>\n",
-       "      <td>Katrina</td>\n",
-       "      <td>2005-08-29</td>\n",
-       "      <td>New Orleans Metro Area</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>-3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2003-01-01</td>\n",
-       "      <td>1312.039</td>\n",
-       "      <td>Katrina</td>\n",
-       "      <td>2005-08-29</td>\n",
-       "      <td>New Orleans Metro Area</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>-2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2004-01-01</td>\n",
-       "      <td>1314.721</td>\n",
-       "      <td>Katrina</td>\n",
-       "      <td>2005-08-29</td>\n",
-       "      <td>New Orleans Metro Area</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2005-01-01</td>\n",
-       "      <td>1313.460</td>\n",
-       "      <td>Katrina</td>\n",
-       "      <td>2005-08-29</td>\n",
-       "      <td>New Orleans Metro Area</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        DATE  Population Hurricane Hurricane Date                Location  \\\n",
-       "1 2001-01-01    1311.131   Katrina     2005-08-29  New Orleans Metro Area   \n",
-       "2 2002-01-01    1311.390   Katrina     2005-08-29  New Orleans Metro Area   \n",
-       "3 2003-01-01    1312.039   Katrina     2005-08-29  New Orleans Metro Area   \n",
-       "4 2004-01-01    1314.721   Katrina     2005-08-29  New Orleans Metro Area   \n",
-       "5 2005-01-01    1313.460   Katrina     2005-08-29  New Orleans Metro Area   \n",
-       "\n",
-       "   Hurricane Year  Population Year  Delta  \n",
-       "1            2005             2001     -4  \n",
-       "2            2005             2002     -3  \n",
-       "3            2005             2003     -2  \n",
-       "4            2005             2004     -1  \n",
-       "5            2005             2005      0  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# remove rows prior to 2001\n",
     "\n",
@@ -1328,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f94fab04",
    "metadata": {},
    "outputs": [],
