Ike add month column

--- a/Project 1 Data Katrina.ipynb
+++ b/Project 1 Data Katrina.ipynb
@@ -133,7 +133,7 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Real GDP Month</th>\n",
+       "      <th>Housing Month</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -200,12 +200,12 @@
        "98 2001-10-01               140.62   Katrina     2005-08-29   \n",
        "99 2002-01-01               141.37   Katrina     2005-08-29   \n",
        "\n",
-       "                  Location  Real GDP Month  Delta  \n",
-       "95  New Orleans Metro Area               1     -4  \n",
-       "96  New Orleans Metro Area               4     -4  \n",
-       "97  New Orleans Metro Area               7     -4  \n",
-       "98  New Orleans Metro Area              10     -3  \n",
-       "99  New Orleans Metro Area               1     -3  "
+       "                  Location  Housing Month  Delta  \n",
+       "95  New Orleans Metro Area              1     -4  \n",
+       "96  New Orleans Metro Area              4     -4  \n",
+       "97  New Orleans Metro Area              7     -4  \n",
+       "98  New Orleans Metro Area             10     -3  \n",
+       "99  New Orleans Metro Area              1     -3  "
       ]
      },
      "execution_count": 3,
@@ -227,9 +227,9 @@
     "katrina_Housing_df['Hurricane Date'] = pd.to_datetime(katrina_Housing_df['Hurricane Date'])\n",
     "\n",
     "\n",
-    "katrina_Housing_df['Real GDP Month'] = pd.to_datetime(katrina_Housing_df['DATE'],format='%Y%m%d')\n",
+    "katrina_Housing_df['Housing Month'] = pd.to_datetime(katrina_Housing_df['DATE'],format='%Y%m%d')\n",
     "\n",
-    "katrina_Housing_df['Real GDP Month'] = katrina_Housing_df['Real GDP Month'].dt.month\n",
+    "katrina_Housing_df['Housing Month'] = katrina_Housing_df['Housing Month'].dt.month\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "\n",
