Ivan column add

--- a/Project 1 Data Ivan.ipynb
+++ b/Project 1 Data Ivan.ipynb
@@ -221,12 +221,14 @@
     "Ivan_housing_df[['Hurricane','Hurricane Date','Location']] = pd.DataFrame([['Ivan','2004-09-04','Pensacola, FL']], index = Ivan_housing_df.index)\n",
     "\n",
     "Ivan_housing_df['Hurricane Date'] = pd.to_datetime(Ivan_housing_df['Hurricane Date'])\n",
+    "Ivan_housing_df['Housing Month'] = pd.to_datetime(Ivan_housing_df['DATE'],format='%Y%m%d')\n",
     "\n",
+    "Ivan_housing_df['Housing Month'] = Ivan_housing_df['Housing Month'].dt.month\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Ivan_housing_df['Delta'] = ((Ivan_housing_df['DATE'] - Ivan_housing_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Ivan_housing_df['Delta'] = Ivan_housing_df['Delta'].astype(float)\n",
+    "Ivan_housing_df['Delta'] = Ivan_housing_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "Ivan_housing_df = Ivan_housing_df.rename(columns={'Index': 'Housing Price Index'})\n",
@@ -437,11 +439,14 @@
     "\n",
     "Ivan_HousingAuthorized_df['Hurricane Date'] = pd.to_datetime(Ivan_HousingAuthorized_df['Hurricane Date'])\n",
     "\n",
+    "Ivan_HousingAuthorized_df['Housing Auth Month'] = pd.to_datetime(Ivan_HousingAuthorized_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "Ivan_HousingAuthorized_df['Housing Auth Month'] = Ivan_HousingAuthorized_df['Housing Auth Month'].dt.month\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Ivan_HousingAuthorized_df['Delta'] = ((Ivan_HousingAuthorized_df['DATE'] - Ivan_HousingAuthorized_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Ivan_HousingAuthorized_df['Delta'] = Ivan_HousingAuthorized_df['Delta'].astype(float)\n",
+    "Ivan_HousingAuthorized_df['Delta'] = Ivan_HousingAuthorized_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "Ivan_HousingAuthorized_df = Ivan_HousingAuthorized_df.rename(columns={'Authorizations': 'New Private Housing Structures Authorized'})\n",
@@ -647,11 +652,18 @@
     "\n",
     "Ivan_real_GDP_df['Hurricane Date'] = pd.to_datetime(Ivan_real_GDP_df['Hurricane Date'])\n",
     "\n",
+    "Ivan_real_GDP_df['Hurricane Year'] = pd.to_datetime(Ivan_real_GDP_df['Hurricane Date'],format='%Y%m%d')\n",
+    "\n",
+    "Ivan_real_GDP_df['Hurricane Year'] = pd.DatetimeIndex(Ivan_real_GDP_df['Hurricane Year']).year\n",
+    "\n",
+    "Ivan_real_GDP_df['Real GDP Year'] = pd.to_datetime(Ivan_real_GDP_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "Ivan_real_GDP_df['Real GDP Year'] = pd.DatetimeIndex(Ivan_real_GDP_df['Real GDP Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Ivan_real_GDP_df['Delta'] = ((Ivan_real_GDP_df['DATE'] - Ivan_real_GDP_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Ivan_real_GDP_df['Delta'] = Ivan_real_GDP_df['Delta'].astype(float)\n",
+    "Ivan_real_GDP_df['Delta'] = Ivan_real_GDP_df['Delta'].astype(int)\n",
     "\n",
     "\n",
     "Ivan_real_GDP_df.head()"
@@ -857,11 +869,14 @@
     "\n",
     "Ivan_unemployment_df['Hurricane Date'] = pd.to_datetime(Ivan_unemployment_df['Hurricane Date'])\n",
     "\n",
+    "Ivan_unemployment_df['Unemployment Month'] = pd.to_datetime(Ivan_unemployment_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "Ivan_unemployment_df['Unemployment Month'] = Ivan_unemployment_df['Unemployment Month'].dt.month\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Ivan_unemployment_df['Delta'] = ((Ivan_unemployment_df['DATE'] - Ivan_unemployment_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Ivan_unemployment_df['Delta'] = Ivan_unemployment_df['Delta'].astype(float)\n",
+    "Ivan_unemployment_df['Delta'] = Ivan_unemployment_df['Delta'].astype(int)\n",
     "\n",
     "\n",
     "Ivan_unemployment_df.head()"
