--- a/Project 1 Data Rita.ipynb
+++ b/Project 1 Data Rita.ipynb
@@ -220,11 +220,14 @@
     "\n",
     "rita_Housing_df['Hurricane Date'] = pd.to_datetime(rita_Housing_df['Hurricane Date'])\n",
     "\n",
+    "rita_Housing_df['Housing Month'] = pd.to_datetime(rita_Housing_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "rita_Housing_df['Housing Month'] = rita_Housing_df['Housing Month'].dt.month\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_Housing_df['Delta'] = ((rita_Housing_df['DATE'] - rita_Housing_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "rita_Housing_df['Delta'] = rita_Housing_df['Delta'].astype(float)\n",
+    "rita_Housing_df['Delta'] = rita_Housing_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "rita_Housing_df = rita_Housing_df.rename(columns={'ATNHPIUS48201A': 'Housing Price Index'})\n",
@@ -435,11 +438,14 @@
     "\n",
     "rita_HousingAuthorized_df['Hurricane Date'] = pd.to_datetime(rita_HousingAuthorized_df['Hurricane Date'])\n",
     "\n",
+    "rita_HousingAuthorized_df['Housing Auth Month'] = pd.to_datetime(rita_HousingAuthorized_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "rita_HousingAuthorized_df['Housing Auth Month'] = rita_HousingAuthorized_df['Housing Auth Month'].dt.month\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_HousingAuthorized_df['Delta'] = ((rita_HousingAuthorized_df['DATE'] - rita_HousingAuthorized_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "rita_HousingAuthorized_df['Delta'] = rita_HousingAuthorized_df['Delta'].astype(float)\n",
+    "rita_HousingAuthorized_df['Delta'] = rita_HousingAuthorized_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "rita_HousingAuthorized_df = rita_HousingAuthorized_df.rename(columns={'BPPRIV048201': 'New Private Housing Structures Authorized'})\n",
@@ -647,11 +653,18 @@
     "\n",
     "rita_real_GDP_df['Hurricane Date'] = pd.to_datetime(rita_real_GDP_df['Hurricane Date'])\n",
     "\n",
+    "rita_real_GDP_df['Hurricane Year'] = pd.to_datetime(rita_real_GDP_df['Hurricane Date'],format='%Y%m%d')\n",
+    "\n",
+    "rita_real_GDP_df['Hurricane Year'] = pd.DatetimeIndex(rita_real_GDP_df['Hurricane Year']).year\n",
+    "\n",
+    "rita_real_GDP_df['Real GDP Year'] = pd.to_datetime(rita_real_GDP_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "rita_real_GDP_df['Real GDP Year'] = pd.DatetimeIndex(rita_real_GDP_df['Real GDP Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_real_GDP_df['Delta'] = ((rita_real_GDP_df['DATE'] - rita_real_GDP_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "rita_real_GDP_df['Delta'] = rita_real_GDP_df['Delta'].astype(float)\n",
+    "rita_real_GDP_df['Delta'] = rita_real_GDP_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "rita_real_GDP_df = rita_real_GDP_df.rename(columns={'REALGDPALL48201': 'Real GDP'})\n",
@@ -854,6 +867,10 @@
     "rita_unemployment_df[['Hurricane','Hurricane Date','Location']] = pd.DataFrame([['Rita','2005-09-18','Houston Area']], index = rita_unemployment_df.index)\n",
     "\n",
     "rita_unemployment_df['Hurricane Date'] = pd.to_datetime(rita_unemployment_df['Hurricane Date'])\n",
+    "\n",
+    "rita_unemployment_df['Unemployment Month'] = pd.to_datetime(rita_unemployment_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "rita_unemployment_df['Unemployment Month'] = rita_unemployment_df['Unemployment Month'].dt.month\n",
     "\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
