Sandy column fix

--- a/Project 1 Data Sandy.ipynb
+++ b/Project 1 Data Sandy.ipynb
@@ -222,11 +222,14 @@
     "\n",
     "Sandy_housing_df['Hurricane Date'] = pd.to_datetime(Sandy_housing_df['Hurricane Date'])\n",
     "\n",
+    "Sandy_housing_df['Housing Month'] = pd.to_datetime(Sandy_housing_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "Sandy_housing_df['Housing Month'] = Sandy_housing_df['Housing Month'].dt.month\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Sandy_housing_df['Delta'] = ((Sandy_housing_df['DATE'] - Sandy_housing_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Sandy_housing_df['Delta'] = Sandy_housing_df['Delta'].astype(float)\n",
+    "Sandy_housing_df['Delta'] = Sandy_housing_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "Sandy_housing_df = Sandy_housing_df.rename(columns={'Index': 'Housing Price Index'})\n",
@@ -437,11 +440,14 @@
     "\n",
     "Sandy_HousingAuthorized_df['Hurricane Date'] = pd.to_datetime(Sandy_HousingAuthorized_df['Hurricane Date'])\n",
     "\n",
+    "Sandy_HousingAuthorized_df['Housing Auth Month'] = pd.to_datetime(Sandy_HousingAuthorized_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "Sandy_HousingAuthorized_df['Housing Auth Month'] = Sandy_HousingAuthorized_df['Housing Auth Month'].dt.month\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Sandy_HousingAuthorized_df['Delta'] = ((Sandy_HousingAuthorized_df['DATE'] - Sandy_HousingAuthorized_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Sandy_HousingAuthorized_df['Delta'] = Sandy_HousingAuthorized_df['Delta'].astype(float)\n",
+    "Sandy_HousingAuthorized_df['Delta'] = Sandy_HousingAuthorized_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "Sandy_HousingAuthorized_df = Sandy_HousingAuthorized_df.rename(columns={'Housing Authorizations': 'New Private Housing Structures Authorized'})\n",
@@ -647,11 +653,18 @@
     "\n",
     "Sandy_real_GDP_df['Hurricane Date'] = pd.to_datetime(Sandy_real_GDP_df['Hurricane Date'])\n",
     "\n",
+    "Sandy_real_GDP_df['Hurricane Year'] = pd.to_datetime(Sandy_real_GDP_df['Hurricane Date'],format='%Y%m%d')\n",
+    "\n",
+    "Sandy_real_GDP_df['Hurricane Year'] = pd.DatetimeIndex(Sandy_real_GDP_df['Hurricane Year']).year\n",
+    "\n",
+    "Sandy_real_GDP_df['Real GDP Year'] = pd.to_datetime(Sandy_real_GDP_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "Sandy_real_GDP_df['Real GDP Year'] = pd.DatetimeIndex(Sandy_real_GDP_df['Real GDP Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Sandy_real_GDP_df['Delta'] = ((Sandy_real_GDP_df['DATE'] - Sandy_real_GDP_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Sandy_real_GDP_df['Delta'] = Sandy_real_GDP_df['Delta'].astype(float)\n",
+    "Sandy_real_GDP_df['Delta'] = Sandy_real_GDP_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "# Sandy_real_GDP_df = Sandy_real_GDP_df.rename(columns={'RGMP36140': 'Real GDP'})\n",
@@ -859,11 +872,14 @@
     "\n",
     "Sandy_unemployment_df['Hurricane Date'] = pd.to_datetime(Sandy_unemployment_df['Hurricane Date'])\n",
     "\n",
+    "Sandy_unemployment_df['Unemployment Month'] = pd.to_datetime(Sandy_unemployment_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "Sandy_unemployment_df['Unemployment Month'] = Sandy_unemployment_df['Unemployment Month'].dt.month\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Sandy_unemployment_df['Delta'] = ((Sandy_unemployment_df['DATE'] - Sandy_unemployment_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Sandy_unemployment_df['Delta'] = Sandy_unemployment_df['Delta'].astype(float)\n",
+    "Sandy_unemployment_df['Delta'] = Sandy_unemployment_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "Sandy_unemployment_df = Sandy_unemployment_df.rename(columns={'Unemployment Rate': 'Unemployment'})\n",
@@ -1067,11 +1083,18 @@
     "\n",
     "Sandy_median_df['Hurricane Date'] = pd.to_datetime(Sandy_median_df['Hurricane Date'])\n",
     "\n",
+    "Sandy_median_df['Hurricane Year'] = pd.to_datetime(Sandy_median_df['Hurricane Date'],format='%Y%m%d')\n",
+    "\n",
+    "Sandy_median_df['Hurricane Year'] = pd.DatetimeIndex(Sandy_median_df['Hurricane Year']).year\n",
+    "\n",
+    "Sandy_median_df['Median Income Year'] = pd.to_datetime(Sandy_median_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "Sandy_median_df['Median Income Year'] = pd.DatetimeIndex(Sandy_median_df['Median Income Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Sandy_median_df['Delta'] = ((Sandy_median_df['DATE'] - Sandy_median_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Sandy_median_df['Delta'] = Sandy_median_df['Delta'].astype(float)\n",
+    "Sandy_median_df['Delta'] = Sandy_median_df['Delta'].astype(int)\n",
     "\n",
     "Sandy_median_df.head()"
    ]
