--- a/Project 1 Data Rita.ipynb
+++ b/Project 1 Data Rita.ipynb
@@ -133,6 +133,7 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Housing Month</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -144,7 +145,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4.715068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -153,7 +155,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-3.715068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -162,7 +165,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-2.715068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -171,7 +175,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-1.715068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -180,7 +185,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-0.712329</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -194,12 +200,12 @@
        "29 2004-01-01               117.15      Rita     2005-09-18  Houston Area   \n",
        "30 2005-01-01               121.90      Rita     2005-09-18  Houston Area   \n",
        "\n",
-       "       Delta  \n",
-       "26 -4.715068  \n",
-       "27 -3.715068  \n",
-       "28 -2.715068  \n",
-       "29 -1.715068  \n",
-       "30 -0.712329  "
+       "    Housing Month  Delta  \n",
+       "26              1     -4  \n",
+       "27              1     -3  \n",
+       "28              1     -2  \n",
+       "29              1     -1  \n",
+       "30              1      0  "
       ]
      },
      "execution_count": 3,
@@ -351,6 +357,7 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Housing Auth Month</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -362,7 +369,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4.715068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -371,7 +379,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-3.715068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -380,7 +389,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-2.715068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -389,7 +399,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-1.715068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -398,7 +409,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-0.712329</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -412,12 +424,12 @@
        "14 2004-01-01                                      36395      Rita   \n",
        "15 2005-01-01                                      41506      Rita   \n",
        "\n",
-       "   Hurricane Date      Location     Delta  \n",
-       "11     2005-09-18  Houston Area -4.715068  \n",
-       "12     2005-09-18  Houston Area -3.715068  \n",
-       "13     2005-09-18  Houston Area -2.715068  \n",
-       "14     2005-09-18  Houston Area -1.715068  \n",
-       "15     2005-09-18  Houston Area -0.712329  "
+       "   Hurricane Date      Location  Housing Auth Month  Delta  \n",
+       "11     2005-09-18  Houston Area                   1     -4  \n",
+       "12     2005-09-18  Houston Area                   1     -3  \n",
+       "13     2005-09-18  Houston Area                   1     -2  \n",
+       "14     2005-09-18  Houston Area                   1     -1  \n",
+       "15     2005-09-18  Houston Area                   1      0  "
       ]
      },
      "execution_count": 5,
@@ -573,6 +585,8 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Real GDP Year</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -584,7 +598,9 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4.715068</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -593,7 +609,9 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-3.715068</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -602,7 +620,9 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-2.715068</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -611,7 +631,9 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-1.715068</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -620,19 +642,28 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-0.712329</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        DATE   Real GDP Hurricane Hurricane Date      Location     Delta\n",
-       "0 2001-01-01  244128701      Rita     2005-09-18  Houston Area -4.715068\n",
-       "1 2002-01-01  242658014      Rita     2005-09-18  Houston Area -3.715068\n",
-       "2 2003-01-01  243159988      Rita     2005-09-18  Houston Area -2.715068\n",
-       "3 2004-01-01  265896284      Rita     2005-09-18  Houston Area -1.715068\n",
-       "4 2005-01-01  269128633      Rita     2005-09-18  Houston Area -0.712329"
+       "        DATE   Real GDP Hurricane Hurricane Date      Location  \\\n",
+       "0 2001-01-01  244128701      Rita     2005-09-18  Houston Area   \n",
+       "1 2002-01-01  242658014      Rita     2005-09-18  Houston Area   \n",
+       "2 2003-01-01  243159988      Rita     2005-09-18  Houston Area   \n",
+       "3 2004-01-01  265896284      Rita     2005-09-18  Houston Area   \n",
+       "4 2005-01-01  269128633      Rita     2005-09-18  Houston Area   \n",
+       "\n",
+       "   Hurricane Year  Real GDP Year  Delta  \n",
+       "0            2005           2001     -4  \n",
+       "1            2005           2002     -3  \n",
+       "2            2005           2003     -2  \n",
+       "3            2005           2004     -1  \n",
+       "4            2005           2005      0  "
       ]
      },
      "execution_count": 7,
@@ -788,6 +819,7 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Unemployment Month</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -799,7 +831,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4.715068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>133</th>\n",
@@ -808,7 +841,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4.630137</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
@@ -817,7 +851,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4.553425</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>135</th>\n",
@@ -826,7 +861,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4.468493</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
@@ -835,19 +871,27 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4.386301</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          DATE  Unemployment Hurricane Hurricane Date      Location     Delta\n",
-       "132 2001-01-01           4.1      Rita     2005-09-18  Houston Area -4.715068\n",
-       "133 2001-02-01           3.9      Rita     2005-09-18  Houston Area -4.630137\n",
-       "134 2001-03-01           4.1      Rita     2005-09-18  Houston Area -4.553425\n",
-       "135 2001-04-01           4.1      Rita     2005-09-18  Houston Area -4.468493\n",
-       "136 2001-05-01           4.2      Rita     2005-09-18  Houston Area -4.386301"
+       "          DATE  Unemployment Hurricane Hurricane Date      Location  \\\n",
+       "132 2001-01-01           4.1      Rita     2005-09-18  Houston Area   \n",
+       "133 2001-02-01           3.9      Rita     2005-09-18  Houston Area   \n",
+       "134 2001-03-01           4.1      Rita     2005-09-18  Houston Area   \n",
+       "135 2001-04-01           4.1      Rita     2005-09-18  Houston Area   \n",
+       "136 2001-05-01           4.2      Rita     2005-09-18  Houston Area   \n",
+       "\n",
+       "     Unemployment Month  Delta  \n",
+       "132                   1     -4  \n",
+       "133                   2     -4  \n",
+       "134                   3     -4  \n",
+       "135                   4     -4  \n",
+       "136                   5     -4  "
       ]
      },
      "execution_count": 9,
@@ -876,7 +920,7 @@
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_unemployment_df['Delta'] = ((rita_unemployment_df['DATE'] - rita_unemployment_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "rita_unemployment_df['Delta'] = rita_unemployment_df['Delta'].astype(float)\n",
+    "rita_unemployment_df['Delta'] = rita_unemployment_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
     "rita_unemployment_df = rita_unemployment_df.rename(columns={'TXHARR1URN': 'Unemployment'})\n",
@@ -1000,6 +1044,8 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Median Income Year</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1011,6 +1057,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2001</td>\n",
        "      <td>-4.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1020,6 +1068,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2002</td>\n",
        "      <td>-3.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1029,6 +1079,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2003</td>\n",
        "      <td>-2.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1038,6 +1090,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2004</td>\n",
        "      <td>-1.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1047,6 +1101,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2005</td>\n",
        "      <td>-0.712329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1054,12 +1110,19 @@
        "</div>"
       ],
       "text/plain": [
-       "         DATE Median Hurricane Hurricane Date      Location     Delta\n",
-       "12 2001-01-01  43279      Rita     2005-09-18  Houston Area -4.715068\n",
-       "13 2002-01-01  42704      Rita     2005-09-18  Houston Area -3.715068\n",
-       "14 2003-01-01  42262      Rita     2005-09-18  Houston Area -2.715068\n",
-       "15 2004-01-01  41922      Rita     2005-09-18  Houston Area -1.715068\n",
-       "16 2005-01-01  44085      Rita     2005-09-18  Houston Area -0.712329"
+       "         DATE Median Hurricane Hurricane Date      Location  Hurricane Year  \\\n",
+       "12 2001-01-01  43279      Rita     2005-09-18  Houston Area            2005   \n",
+       "13 2002-01-01  42704      Rita     2005-09-18  Houston Area            2005   \n",
+       "14 2003-01-01  42262      Rita     2005-09-18  Houston Area            2005   \n",
+       "15 2004-01-01  41922      Rita     2005-09-18  Houston Area            2005   \n",
+       "16 2005-01-01  44085      Rita     2005-09-18  Houston Area            2005   \n",
+       "\n",
+       "    Median Income Year     Delta  \n",
+       "12                2001 -4.715068  \n",
+       "13                2002 -3.715068  \n",
+       "14                2003 -2.715068  \n",
+       "15                2004 -1.715068  \n",
+       "16                2005 -0.712329  "
       ]
      },
      "execution_count": 11,
@@ -1080,6 +1143,13 @@
     "\n",
     "rita_median_df['Hurricane Date'] = pd.to_datetime(rita_median_df['Hurricane Date'])\n",
     "\n",
+    "rita_median_df['Hurricane Year'] = pd.to_datetime(rita_median_df['Hurricane Date'],format='%Y%m%d')\n",
+    "\n",
+    "rita_median_df['Hurricane Year'] = pd.DatetimeIndex(rita_median_df['Hurricane Year']).year\n",
+    "\n",
+    "rita_median_df['Median Income Year'] = pd.to_datetime(rita_median_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "rita_median_df['Median Income Year'] = pd.DatetimeIndex(rita_median_df['Median Income Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_median_df['Delta'] = ((rita_median_df['DATE'] - rita_median_df['Hurricane Date']).dt.days/365)\n",
