--- a/New Private Housing Authorizations.ipynb
+++ b/New Private Housing Authorizations.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "802ab493",
    "metadata": {
     "scrolled": false
@@ -27,49 +27,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Location Hurricane  New Private Housing Structures Authorized  Delta  \\\n",
-      "0   Houston Area      Rita                                      26419     -4   \n",
-      "1   Houston Area      Rita                                      34339     -3   \n",
-      "2   Houston Area      Rita                                      40983     -2   \n",
-      "3   Houston Area      Rita                                      36395     -1   \n",
-      "4   Houston Area      Rita                                      41506      0   \n",
-      "5   Houston Area      Rita                                      46455      0   \n",
-      "6   Houston Area      Rita                                      40238      1   \n",
-      "7   Houston Area      Rita                                      27877      2   \n",
-      "8   Houston Area      Rita                                      14142      3   \n",
-      "9   Houston Area      Rita                                      15039      4   \n",
-      "10  Houston Area      Rita                                      17338      5   \n",
-      "11  Houston Area      Rita                                      27154      6   \n",
-      "12  Houston Area      Rita                                      30998      7   \n",
-      "13  Houston Area      Rita                                      40060      8   \n",
-      "14  Houston Area      Rita                                      33975      9   \n",
-      "15  Houston Area      Rita                                      22661     10   \n",
-      "16  Houston Area      Rita                                      22818     11   \n",
-      "17  Houston Area      Rita                                      34149     12   \n",
-      "18  Houston Area      Rita                                      37755     13   \n",
-      "19  Houston Area      Rita                                      36961     14   \n",
+      "                  Location Hurricane  \\\n",
+      "0   New Orleans Metro Area   Katrina   \n",
+      "1   New Orleans Metro Area   Katrina   \n",
+      "2   New Orleans Metro Area   Katrina   \n",
+      "3   New Orleans Metro Area   Katrina   \n",
+      "4   New Orleans Metro Area   Katrina   \n",
+      "5   New Orleans Metro Area   Katrina   \n",
+      "6   New Orleans Metro Area   Katrina   \n",
+      "7   New Orleans Metro Area   Katrina   \n",
+      "8   New Orleans Metro Area   Katrina   \n",
+      "9   New Orleans Metro Area   Katrina   \n",
+      "10  New Orleans Metro Area   Katrina   \n",
+      "11  New Orleans Metro Area   Katrina   \n",
+      "12  New Orleans Metro Area   Katrina   \n",
+      "13  New Orleans Metro Area   Katrina   \n",
+      "14  New Orleans Metro Area   Katrina   \n",
       "\n",
-      "    Housing Auth Month  \n",
-      "0                    1  \n",
-      "1                    1  \n",
-      "2                    1  \n",
-      "3                    1  \n",
-      "4                    1  \n",
-      "5                    1  \n",
-      "6                    1  \n",
-      "7                    1  \n",
-      "8                    1  \n",
-      "9                    1  \n",
-      "10                   1  \n",
-      "11                   1  \n",
-      "12                   1  \n",
-      "13                   1  \n",
-      "14                   1  \n",
-      "15                   1  \n",
-      "16                   1  \n",
-      "17                   1  \n",
-      "18                   1  \n",
-      "19                   1  \n"
+      "    New Private Housing Structures Authorized  Delta  Housing Auth Month  \n",
+      "0                                        3823     -4                   1  \n",
+      "1                                        4690     -3                   1  \n",
+      "2                                        5530     -2                   1  \n",
+      "3                                        6413     -1                   1  \n",
+      "4                                        4534      0                   1  \n",
+      "5                                        5399      0                   1  \n",
+      "6                                        6865      1                   1  \n",
+      "7                                        4734      2                   1  \n",
+      "8                                        2812      3                   1  \n",
+      "9                                        2186      4                   1  \n",
+      "10                                       2319      5                   1  \n",
+      "11                                       2394      6                   1  \n",
+      "12                                       2731      7                   1  \n",
+      "13                                       2800      8                   1  \n",
+      "14                                       2369      9                   1  \n"
      ]
     }
    ],
@@ -96,115 +86,49 @@
     "auth_ivan_df = pd.read_csv(auth_ivan)\n",
     "auth_ivan_df = auth_ivan_df[['Location','Hurricane','New Private Housing Structures Authorized','Delta','Housing Auth Month']]\n",
     "\n",
-    "print(auth_rita_df)"
+    "print(auth_katrina_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "dc532b4e",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Hurricane</th>\n",
-       "      <th>New Private Housing Structures Authorized</th>\n",
-       "      <th>Delta</th>\n",
-       "      <th>Housing Auth Month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Cape May, NJ</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>485.0</td>\n",
-       "      <td>-4.1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Cape May, NJ</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>428.0</td>\n",
-       "      <td>-3.1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Cape May, NJ</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>434.0</td>\n",
-       "      <td>-2.1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Cape May, NJ</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>452.0</td>\n",
-       "      <td>-1.1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Cape May, NJ</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>491.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index      Location Hurricane  New Private Housing Structures Authorized  \\\n",
-       "0      2  Cape May, NJ     Sandy                                      485.0   \n",
-       "1      3  Cape May, NJ     Sandy                                      428.0   \n",
-       "2      4  Cape May, NJ     Sandy                                      434.0   \n",
-       "3      5  Cape May, NJ     Sandy                                      452.0   \n",
-       "4      6  Cape May, NJ     Sandy                                      491.0   \n",
-       "\n",
-       "   Delta  Housing Auth Month  \n",
-       "0   -4.1                   1  \n",
-       "1   -3.1                   1  \n",
-       "2   -2.1                   1  \n",
-       "3   -1.1                   1  \n",
-       "4    0.1                   1  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    index      Location Hurricane  New Private Housing Structures Authorized  \\\n",
+      "0       2  Cape May, NJ     Sandy                                      485.0   \n",
+      "1       3  Cape May, NJ     Sandy                                      428.0   \n",
+      "2       4  Cape May, NJ     Sandy                                      434.0   \n",
+      "3       5  Cape May, NJ     Sandy                                      452.0   \n",
+      "4       6  Cape May, NJ     Sandy                                      491.0   \n",
+      "..    ...           ...       ...                                        ...   \n",
+      "94      8  Houston Area      Rita                                    14142.0   \n",
+      "95      9  Houston Area      Rita                                    15039.0   \n",
+      "96     10  Houston Area      Rita                                    17338.0   \n",
+      "97     11  Houston Area      Rita                                    27154.0   \n",
+      "98     12  Houston Area      Rita                                    30998.0   \n",
+      "\n",
+      "    Delta  Housing Auth Month  \n",
+      "0    -4.1                   1  \n",
+      "1    -3.1                   1  \n",
+      "2    -2.1                   1  \n",
+      "3    -1.1                   1  \n",
+      "4     0.1                   1  \n",
+      "..    ...                 ...  \n",
+      "94    3.1                   1  \n",
+      "95    4.1                   1  \n",
+      "96    5.1                   1  \n",
+      "97    6.1                   1  \n",
+      "98    7.1                   1  \n",
+      "\n",
+      "[99 rows x 6 columns]\n"
+     ]
     }
    ],
    "source": [
@@ -221,7 +145,7 @@
     "auth_merge_df['Delta'] = auth_merge_df['Delta'].astype(float)\n",
     "\n",
     "auth_merge_df.head()\n",
-    "# print(auth_merge_df)\n",
+    "print(auth_merge_df)\n",
     "# print(auth_merge_df.columns.tolist())"
    ]
   },
