--- a/Project 1 Data Ike.ipynb
+++ b/Project 1 Data Ike.ipynb
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "59117dbb",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1040,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>MHITX48201A052NCEN</th>\n",
+       "      <th>Median</th>\n",
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
@@ -1059,7 +1059,7 @@
        "      <td>Galveston</td>\n",
        "      <td>2008</td>\n",
        "      <td>2001</td>\n",
-       "      <td>-7.70411</td>\n",
+       "      <td>-7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -1070,7 +1070,7 @@
        "      <td>Galveston</td>\n",
        "      <td>2008</td>\n",
        "      <td>2002</td>\n",
-       "      <td>-6.70411</td>\n",
+       "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -1081,7 +1081,7 @@
        "      <td>Galveston</td>\n",
        "      <td>2008</td>\n",
        "      <td>2003</td>\n",
-       "      <td>-5.70411</td>\n",
+       "      <td>-5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -1092,7 +1092,7 @@
        "      <td>Galveston</td>\n",
        "      <td>2008</td>\n",
        "      <td>2004</td>\n",
-       "      <td>-4.70411</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1103,29 +1103,29 @@
        "      <td>Galveston</td>\n",
        "      <td>2008</td>\n",
        "      <td>2005</td>\n",
-       "      <td>-3.70137</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         DATE MHITX48201A052NCEN Hurricane Hurricane Date   Location  \\\n",
-       "12 2001-01-01              43279       Ike     2008-09-13  Galveston   \n",
-       "13 2002-01-01              42704       Ike     2008-09-13  Galveston   \n",
-       "14 2003-01-01              42262       Ike     2008-09-13  Galveston   \n",
-       "15 2004-01-01              41922       Ike     2008-09-13  Galveston   \n",
-       "16 2005-01-01              44085       Ike     2008-09-13  Galveston   \n",
+       "         DATE Median Hurricane Hurricane Date   Location  Hurricane Year  \\\n",
+       "12 2001-01-01  43279       Ike     2008-09-13  Galveston            2008   \n",
+       "13 2002-01-01  42704       Ike     2008-09-13  Galveston            2008   \n",
+       "14 2003-01-01  42262       Ike     2008-09-13  Galveston            2008   \n",
+       "15 2004-01-01  41922       Ike     2008-09-13  Galveston            2008   \n",
+       "16 2005-01-01  44085       Ike     2008-09-13  Galveston            2008   \n",
        "\n",
-       "    Hurricane Year  Median Income Year    Delta  \n",
-       "12            2008                2001 -7.70411  \n",
-       "13            2008                2002 -6.70411  \n",
-       "14            2008                2003 -5.70411  \n",
-       "15            2008                2004 -4.70411  \n",
-       "16            2008                2005 -3.70137  "
+       "    Median Income Year  Delta  \n",
+       "12                2001     -7  \n",
+       "13                2002     -6  \n",
+       "14                2003     -5  \n",
+       "15                2004     -4  \n",
+       "16                2005     -3  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,17 +1154,17 @@
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Ike_median_df['Delta'] = ((Ike_median_df['DATE'] - Ike_median_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Ike_median_df['Delta'] = Ike_median_df['Delta'].astype(float)\n",
+    "Ike_median_df['Delta'] = Ike_median_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
-    "Ike_median_df = Ike_median_df.rename(columns={'MHITX48225A052NCEN': 'Median Income'})\n",
+    "Ike_median_df = Ike_median_df.rename(columns={'MHITX48201A052NCEN': 'Median'})\n",
     "\n",
     "Ike_median_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "da5028ad",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1232,7 @@
        "4  1/1/2005     274.354"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "171c4b36",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1360,7 @@
        "4             2005     -3  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "aea1c14e",
    "metadata": {},
    "outputs": [],
