--- a/Project 1 Data Ivan.ipynb
+++ b/Project 1 Data Ivan.ipynb
@@ -1057,7 +1057,7 @@
        "      <td>Pensacola, FL</td>\n",
        "      <td>2004</td>\n",
        "      <td>2001</td>\n",
-       "      <td>-3.676712</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -1068,7 +1068,7 @@
        "      <td>Pensacola, FL</td>\n",
        "      <td>2004</td>\n",
        "      <td>2002</td>\n",
-       "      <td>-2.676712</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -1079,7 +1079,7 @@
        "      <td>Pensacola, FL</td>\n",
        "      <td>2004</td>\n",
        "      <td>2003</td>\n",
-       "      <td>-1.676712</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -1090,7 +1090,7 @@
        "      <td>Pensacola, FL</td>\n",
        "      <td>2004</td>\n",
        "      <td>2004</td>\n",
-       "      <td>-0.676712</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1101,7 +1101,7 @@
        "      <td>Pensacola, FL</td>\n",
        "      <td>2004</td>\n",
        "      <td>2005</td>\n",
-       "      <td>0.326027</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1115,12 +1115,12 @@
        "15 2004-01-01  36743      Ivan     2004-09-04  Pensacola, FL            2004   \n",
        "16 2005-01-01  39830      Ivan     2004-09-04  Pensacola, FL            2004   \n",
        "\n",
-       "    Median Income Year     Delta  \n",
-       "12                2001 -3.676712  \n",
-       "13                2002 -2.676712  \n",
-       "14                2003 -1.676712  \n",
-       "15                2004 -0.676712  \n",
-       "16                2005  0.326027  "
+       "    Median Income Year  Delta  \n",
+       "12                2001     -3  \n",
+       "13                2002     -2  \n",
+       "14                2003     -1  \n",
+       "15                2004      0  \n",
+       "16                2005      0  "
       ]
      },
      "execution_count": 11,
@@ -1152,7 +1152,7 @@
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "Ivan_median_df['Delta'] = ((Ivan_median_df['DATE'] - Ivan_median_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "Ivan_median_df['Delta'] = Ivan_median_df['Delta'].astype(float)\n",
+    "Ivan_median_df['Delta'] = Ivan_median_df['Delta'].astype(int)\n",
     "\n",
     "\n",
     "Ivan_median_df.head()"
