--- a/Project 1 Data Katrina.ipynb
+++ b/Project 1 Data Katrina.ipynb
@@ -1152,7 +1152,7 @@
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "katrina_median_df['Delta'] = ((katrina_median_df['Median Income Year'] - katrina_median_df['Hurricane Year']))\n",
     "\n",
-    "# katrina_median_df['Delta'] = katrina_median_df['Delta'].astype(int)\n",
+    "katrina_median_df['Delta'] = katrina_median_df['Delta'].astype(int)\n",
     "\n",
     "katrina_median_df.head()\n",
     "\n"
